--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,81 +1,82 @@
-img{
-  width: 60%;
+img {
+  width: 80%;
   align-self: center;
 }
 
-.card{
+.card {
   border: rgb(103, 102, 105) 3px solid;
-  display: flex;  
+  display: flex;
   flex-direction: column;
-  margin-left:5%;
-  margin-right:5%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-top: 1%;
   margin-bottom: 1%;
 }
 
-.row{
-  display: flex;  
+.row {
+  display: flex;
   flex: 1;
   flex-direction: row;
   margin: auto;
   margin-top: 1%;
-  justify-content: center;
-  padding:20px;
+  justify-content: space-evenly;
+  padding: 20px;
 }
 
-.container{
+.container {
   justify-content: center;
 }
-.details{
+.details {
   font-size: 20px;
   color: rgb(97, 64, 128);
-  padding:20px;
+  padding: 20px;
 }
 
-.title{
+.title {
   font-size: 20px;
   background-color: rgb(97, 64, 128);
   color: white;
   text-align: center;
-  margin:20px;
-  padding:5px;
+  margin: 20px;
+  padding: 5px;
 }
 
-.homepage_links{
-  color:  rgb(97, 64, 128);
+.homepage_links {
+  color: rgb(97, 64, 128);
   padding: 25%;
   font-size: larger;
-  }
+}
 
-.loginlink{
+.loginlink {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
 }
 
-.banner{
+.banner {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex:1
+  flex: 1;
+  padding: 1% 2%;
 }
 
 .form_panel {
-  padding:2%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   border-radius: 50px;
-  text-align:center;
+  text-align: center;
   box-shadow: 2px 2px 2px 3px #999;
   margin: auto;
   min-width: 350px;
   width: 80%;
-  margin-top:3%;
+  margin-top: 3%;
   background-color: black;
 }
 
-.navitems{
+.navitems {
   display: flex;
   flex-direction: row;
   padding: 20px;
@@ -84,18 +85,18 @@ img{
   justify-self: center;
 }
 
-.nav_item{
-  margin-left:15px;
+.nav_item {
+  margin-left: 15px;
   font-size: 20px;
   color: black;
   align-self: center;
 }
 
-.username{
+.username {
   font: 30px sans-serif;
-  color:black;
+  color: black;
   justify-content: 'flex-end';
-  align-self:flex-end;
+  align-self: flex-end;
   vertical-align: middle;
 }
 
@@ -104,23 +105,75 @@ img{
   flex-direction: row;
   padding: 20px;
   flex: 1;
-  justify-content:flex-end;
+  justify-content: flex-end;
   align-items: flex-end;
   vertical-align: middle;
 }
 
-.small_header{
+.small_header {
   font: 30px sans-serif;
-  color:black;
-  margin: .5cm;
+  color: black;
+  margin: 0.5cm;
 }
 
 .img_icon {
   align-self: center;
-    width:40px;
-    background-color:#0C9;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;  
+  width: 40px;
+  background-color: #0c9;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+}
+
+/* contact page */
+.contact-details-section {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* margin-top: 50px;  */
+  position: relative;
+  z-index: 10;
+}
+.contact-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+.contact-list li {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+}
+.contact-list li strong {
+  margin-right: 15px;
+  color: #003366;
+  font-weight: bold;
+  min-width: 150px;
+  display: inline-block;
+}
+.contact-list li a {
+  color: #0077cc;
+  text-decoration: none;
+}
+.contact-list li a:hover {
+  text-decoration: underline;
+}
+
+.contact-banner {
+  background-image: url('/static/cars.jpeg'); /* Placeholder image */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  height: 30vh;
+  min-height: 30%;
+}
+
+hr.contact-line {
+  width: 80%;
+  align-self: center;
+  color: var(--bs-gray-dark);
+  margin-top: 2%;
 }
